# arc_points_3d

./: CMakeLists.txt  README.md  arcpoints.cpp  arcpoints.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
libocct/: draw_primitives.cpp  draw_primitives.h  opencascade.cpp  opencascade.h
